# fortran-go-brrr

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.bcr/: metadata.template.json  presubmit.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  release.yaml
docs/: BUILD.bazel
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/examples/: basic.md  interop.md  wasm.md
docs/guide/: concepts.md  contributing.md  installation.md  quick-start.md
examples/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  core.f90  hello.f90  io_module.f90  main.f90  math_module.f90
examples/basic/: BUILD.bazel  math_test.f90  statistics.f90  use_include.f90
examples/basic/include/: constants.inc
examples/blas/: BUILD.bazel  README.md  blas.BUILD  run.py
examples/interop/: BUILD.bazel  c_calls_fortran.c  c_calls_fortran_runtime.c  c_math.c  c_math.h  fortran_calls_c.f90  fortran_math.f90  fortran_runtime_features.f90  full.c
examples/lapack/: BUILD.bazel  README.md  chol.f90  lapack.BUILD  lapack_testing.py  lapacke.BUILD  main.f90  mixed.f90  pr-1164-msvc-complex.patch  run.py
examples/refblas/: BUILD.bazel  README.md  blas.BUILD  main.f90  run.py  run.sh
examples/wasm/: BUILD.bazel  hello.f90
fortran/: BUILD.bazel  defs.bzl  extensions.bzl  llvm_repositories.bzl  repositories.bzl  toolchain.bzl
fortran/private/: BUILD.bazel  compile.bzl  fortran_binary.bzl  fortran_library.bzl  fortran_test.bzl  providers.bzl
fortran/toolchains/: BUILD.bazel
test/: BUILD.bazel
test/unit/: BUILD.bazel  common.bzl
test/unit/action_validation/: BUILD.bazel  action_validation_test.bzl  module_a.f90  module_b.f90  simple.f90  simple_regular.f90  test.inc  test.mod
test/unit/cc_interop/: BUILD.bazel  c_helper.c  c_helper.h  cc_interop_test.bzl  fortran_main.f90  fortran_module.f90
test/unit/dependency_propagation/: BUILD.bazel  dependency_propagation_test.bzl  diamond_base.f90  diamond_left.f90  diamond_right.f90  diamond_top.f90  lib_a.f90  lib_b.f90  lib_c.f90
test/unit/edge_cases/: BUILD.bazel  dep_a.f90  edge_cases_test.bzl  single.f90  standalone.f90
test/unit/fortran_binary/: BUILD.bazel  fortran_binary_test.bzl  simple_lib.f90  simple_main.f90
test/unit/fortran_library/: BUILD.bazel  fortran_library_test.bzl  simple.f90
test/unit/linking/: BUILD.bazel  base.f90  lib.f90  linking_test.bzl  main.f90  middle.f90
test/unit/module_propagation/: BUILD.bazel  dummy.c  module_a.f90  module_b.f90  module_c.f90  module_propagation_test.bzl
