"""Root BUILD file for rules_fortran."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = ["//fortran:defs"],
)

exports_files([
    "defs.bzl",
    "LICENSE",
    "README.md",
])

filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
)
