load("@rules_python//python:defs.bzl", "py_test")
load("//:defs.bzl", "fortran_binary")

# simple DGESV run
fortran_binary(
    name = "main",
    srcs = ["main.f90"],
    copts = ["-O2"],
    deps = ["@lapack"],
)

# Cholesky decomposition demo
fortran_binary(
    name = "chol",
    srcs = ["chol.f90"],
    copts = ["-O2"],
    deps = ["@lapack"],
)

