load("//:defs.bzl", "fortran_binary")

# simple DGESV run
fortran_binary(
    name = "main",
    srcs = ["main.f90"],
    copts = ["-O2"],
    deps = ["@lapack"],
)

# Cholesky decomposition demo
fortran_binary(
    name = "chol",
    srcs = ["chol.f90"],
    copts = ["-O2"],
    deps = ["@lapack"],
)

# Selective compilation
fortran_binary(
    name = "mixed",
    srcs = ["mixed.f90"],
    copts = ["-O2"],
    deps = [
        "@lapack//:double",
        "@lapack//:single",
    ],
)
