load("//:defs.bzl", "fortran_binary", "fortran_test")

# simple DGESV run
fortran_test(
    name = "main",
    srcs = ["main.f90"],
    copts = ["-O2"],
    deps = ["@lapack"],
)

# Cholesky decomposition demo
fortran_test(
    name = "chol",
    srcs = ["chol.f90"],
    copts = ["-O2"],
    deps = ["@lapack"],
)

# Selective compilation
fortran_test(
    name = "mixed",
    srcs = ["mixed.f90"],
    copts = ["-O2"],
    deps = [
        "@lapack//:single",
        "@lapack//:double",
    ],
)
